# stratum

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  docker-compose.yml
adapters/csv/: Cargo.toml
adapters/csv/src/: adapter.rs  error.rs  filter.rs  lib.rs  metadata.rs  settings.rs  source.rs  types.rs
adapters/sql/mysql/: Cargo.toml
adapters/sql/mysql/sql/: table_exists.sql
adapters/sql/mysql/src/: adapter.rs  data_type.rs  lib.rs  metadata.rs  mysql.rs  source.rs
adapters/sql/postgres/: Cargo.toml
adapters/sql/postgres/sql/: table_referencing.sql
adapters/sql/postgres/src/: adapter.rs  data_type.rs  destination.rs  lib.rs  metadata.rs  postgres.rs
cli/: Cargo.toml
cli/.cargo/: config.toml
cli/src/: commands.rs  error.rs  main.rs  output.rs
crates/cli/: Cargo.toml  build.rs
crates/cli/src/: args.rs  commands.rs  compile.rs  config.rs  config_discovery.rs  conn.rs  env.rs  error.rs  logger.rs  main.rs  output.rs  pretty_printer.rs  shutdown.rs  version.rs
crates/cli/src/commands/: apply.rs  mod.rs  pause.rs  ping.rs  plan.rs  reset.rs  resume.rs  status.rs  test_conn.rs  verify.rs  version.rs
crates/cli/src/tui/: mod.rs  orchestrator.rs  pipeline.rs  plan.rs  planner.rs  tasks.rs  terminal.rs
crates/connectors/: Cargo.toml
crates/connectors/src/: adapter.rs  driver.rs  error.rs  lib.rs  registry.rs
crates/connectors/src/drivers/: mod.rs
crates/connectors/src/metadata/: entity.rs  field.rs
crates/connectors/src/sql/: macros.rs  mod.rs  request.rs
crates/connectors/src/traits/: ddl.rs  driver.rs  executor.rs  introspector.rs  mod.rs  reader.rs  row_decoder.rs  transaction.rs  writer.rs
crates/engine-config/: Cargo.toml
crates/engine-config/src/: error.rs  lib.rs
crates/engine-config/src/report/: dry_run.rs  finding.rs  mapping.rs  metrics.rs  mod.rs  schema.rs  sql.rs  summary.rs  transform.rs
crates/engine-config/src/settings/: batch_size.rs  cascade.rs  constraints.rs  context.rs  copy_cols.rs  create_cols.rs  create_tables.rs  driver.rs  endpoint.rs  error.rs  infer_schema.rs  mod.rs  orchestrator.rs  traits.rs  (+5 more)
crates/engine-core/: Cargo.toml
crates/engine-core/src/: convert.rs  error.rs  lib.rs  metrics.rs  migration_state.rs  plan.rs  plan_builder.rs  progress.rs  retry.rs  utils.rs
crates/engine-infra/: Cargo.toml
crates/engine-infra/src/: lib.rs  progress.rs  retry.rs  shutdown.rs
crates/engine-planner/: Cargo.toml
crates/engine-planner/resources/: diagnostic.toml  hooks.toml
crates/engine-planner/src/: lib.rs
crates/engine-processing/: Cargo.toml
crates/engine-processing/src/: cb.rs  context.rs  error.rs  item.rs  lib.rs  retry.rs  state_manager.rs
crates/engine-runtime/: Cargo.toml
crates/engine-runtime/src/: error.rs  lib.rs
crates/engine-schema/: Cargo.toml
crates/engine-schema/src/: dep_graph.rs  error.rs  graph_expander.rs  lib.rs  metadata_cache.rs  plan.rs  planner.rs  row_counter.rs  schema_ops.rs  type_registry.rs  types.rs  utils.rs
crates/engine-state/: Cargo.toml
crates/engine-state/src/: error.rs  lib.rs  merkle_store.rs  models.rs  sled_store.rs  store.rs
crates/engine-tests/: Cargo.toml
crates/engine-tests/src/: dag_integration.rs  engine.rs  integration.rs  lib.rs  paginate.rs  phase2.rs  resume.rs  schema_objects.rs  utils.rs  verify.rs  verify_schema_objects.rs
crates/engine-verify/: Cargo.toml
crates/engine-verify/src/: error.rs  lib.rs  reader.rs  verifier.rs
crates/engine-wasm/: Cargo.toml
crates/engine-wasm/src/: error.rs  lib.rs  registry.rs  schema.rs  validation.rs
crates/expression-engine/: Cargo.toml
crates/expression-engine/src/: analyzer.rs  context.rs  error.rs  lib.rs  types.rs
crates/model/: Cargo.toml
crates/model/examples/: migration_events.rs
crates/model/src/: lib.rs
crates/planner/: Cargo.toml
crates/planner/src/: lib.rs  plan.rs
crates/sdk/stratum-plugin-js-runtime/: Cargo.toml
crates/sdk/stratum-plugin-sdk/: Cargo.toml
crates/smql-syntax/: Cargo.toml
crates/smql-syntax/src/: builder.rs  error.rs  errors.rs  lib.rs  parser.rs  parser_v2.rs
crates/smql-syntax/tests/: builder_tests.rs  grammar_tests.rs  semantic_tests.rs
engine/: Cargo.toml
engine/src/: adapter.rs  buffer.rs  config.rs  consumer.rs  context.rs  error.rs  lib.rs  mapper.rs  metadata.rs  metrics.rs  producer.rs  record.rs  report.rs  runner.rs  schema_plan.rs  settings.rs  state.rs
engine/src/config/: config.rs  mapping.rs  mod.rs
engine/src/conn/: mod.rs
engine/src/consumer/: live.rs  mod.rs  trigger.rs  validation.rs
engine/src/context/: global.rs  item.rs  mod.rs
engine/src/database/: column.rs  connection.rs  mapping.rs  mod.rs  operations.rs  query.rs  row.rs  source.rs  utils.rs
engine/src/db/: col.rs  conn.rs  mapping.rs  mod.rs  source.rs  transform.rs  types.rs
engine/src/destination/: data.rs  data_dest.rs  destination.rs  mod.rs  mysql.rs  postgres.rs
engine/src/expr/: eval.rs  mod.rs  types.rs
engine/src/filter/: compiler.rs  csv.rs  db.rs  filter.rs  mod.rs  sql.rs
engine/src/mapping/: field.rs
engine/src/metadata/: column.rs  entity.rs  field.rs  foreign_key.rs  table.rs
engine/src/pipeline/: batch.rs
engine/src/producer/: live.rs  mod.rs  schema_validator.rs  validation.rs
engine/src/report/: dry_run.rs  finding.rs  mapping.rs  metrics.rs  mod.rs  schema.rs  sql.rs  transform.rs  validation.rs
engine/src/schema/: mod.rs  plan.rs  types.rs  utils.rs
engine/src/settings/: batch_size.rs  cascade.rs  constraints.rs  context.rs  copy_cols.rs  create_cols.rs  create_tables.rs  error.rs  infer_schema.rs  mod.rs  phase.rs  schema_manager.rs
engine/src/source/: data.rs  data_source.rs  datasource.rs  linked.rs  linked_source.rs  load.rs  mod.rs  mysql.rs  record.rs  source.rs
engine/src/state/: mod.rs  models.rs  sled_store.rs
engine/src/tests/: integration.rs  mod.rs  utils.rs
engine/src/transform/: computed.rs  mapping.rs  mod.rs  pipeline.rs
engine/src/validate/: mod.rs  schema_validator.rs
engine/src/validation/: key.rs  mod.rs  schema_validator.rs
(+1002 files in other folders)
