[workspace]
members = [
    "crates/model",
    "crates/smql-syntax",
    "crates/query-builder",
    "crates/connectors",
    "crates/engine-core",
    "crates/engine-state",
    "crates/engine-infra",
    "crates/engine-config",
    "crates/engine-runtime",
    "crates/engine-processing",
    "crates/engine-tests",
    "crates/expression-engine",
    "crates/cli",
    "crates/engine-planner",
    "crates/engine-schema",
    "crates/engine-verify",
]

resolver = "2"
