[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
engine = { path = "../engine" }
tokio = { version = "1.43.0", features = ["full"] }
sqlx = { version = "0.8.3", features = [
    "mysql",
    "postgres",
    "runtime-tokio",
    "tls-native-tls",
] }
clap = { version = "4.5.28", features = ["derive"] }
