[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
engine = { path = "../engine" }
smql = { path = "../smql" }
sql_adapter = { path = "../adapters/sql/sql_adapter" }

tokio = { version = "1.43.0", features = ["full"] }
sqlx = { version = "0.8.3", features = [
    "mysql",
    "postgres",
    "runtime-tokio",
    "tls-native-tls",
] }
clap = { version = "4.5.28", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
serde_json = "1.0.138"
