[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.86"
serde = "1.0.217"
sqlx = { version = "0.8.3", features = [
    "mysql",
    "postgres",
    "runtime-tokio",
    "tls-native-tls",
    "bigdecimal"
] }
tokio = { version = "1.43.0", features = ["full"] }
toml = "0.8.20"
futures = "0.3.31"
bigdecimal = "0.4.7"
serde_yaml = "0.9.34"
serde_json = "1.0.138"
