[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[dependencies]
mysql = { path = "../adapters/sql/mysql" }
postgres = { path = "../adapters/sql/postgres" }
sql_adapter = { path = "../adapters/sql/sql_adapter" }
smql = { path = "../smql" }
smql_v02 = { path = "../smql_v0.2" }
common = { path = "../common" }

async-trait = "0.1.86"
serde = "1.0.217"
sqlx = { version = "0.8.3", features = [
    "mysql",
    "postgres",
    "runtime-tokio",
    "tls-native-tls",
    "bigdecimal",
] }
tokio = { version = "1.43.0", features = ["full"] }
toml = "0.8.20"
futures = "0.3.31"
bigdecimal = "0.4.7"
serde_yaml = "0.9.34"
serde_json = "1.0.138"
chrono = { version = "0.4.39", features = ["serde"] }
uuid = { version = "1.13.1", features = ["serde", "v4"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
lazy_static = "1.5.0"
sled = "0.34.7"
bincode = "1.3.3"
bitflags = "2.9.0"
thiserror = "2.0.12"
