[package]
name = "csv"
version = "0.1.0"
edition = "2021"

[dependencies]
data-model = { path = "../../data-model" }

csv = "1.3.1"
thiserror = "2.0.12"
bigdecimal = "0.4.7"
chrono = { version = "0.4.39", features = ["serde"] }
serde_json = "1.0.138"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
serde = "1.0.217"
