[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
smql-syntax = { path = "../smql-syntax" }
query-builder = { path = "../query-builder" }
model = { path = "../model" }
connectors = { path = "../connectors" }
engine-runtime = { path = "../engine-runtime" }
engine-config = { path = "../engine-config" }
engine-core = { path = "../engine-core" }
engine-infra = { path = "../engine-infra" }
engine-processing = { path = "../engine-processing" }
engine-planner = { path = "../engine-planner" }
engine-state = { path = "../engine-state" }
engine-verify = { path = "../engine-verify" }

tokio = { version = "1.43.0", features = ["full"] }
tokio-util = "0.7.17"
mysql_async = "0.36.1"
tokio-postgres = "0.7.12"
clap = { version = "4.5.28", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
serde_json = "1.0.138"
serde = "1.0.217"
thiserror = "2.0.12"
futures-util = "0.3.31"
async-trait = "0.1.86"
dirs = "6.0.0"
ratatui = "0.29.0"
crossterm = { version = "0.28.1", features = ["event-stream"] }
chrono = "0.4"
blake3 = "1.5.5"
indicatif = "0.17"

[build-dependencies]
chrono = "0.4"
