[package]
name = "connectors"
version = "0.1.0"
edition = "2024"

[dependencies]
model = { path = "../model" }
planner = { path = "../planner" }
smql-syntax = { path = "../smql-syntax" }

async-trait = "0.1.86"
tokio = { version = "1.43.0", features = ["full"] }
bigdecimal = "0.4.7"
chrono = { version = "0.4.39", features = ["serde"] }
uuid = { version = "1.13.1", features = ["serde"] }
serde_json = "1.0.138"
lazy_static = "1.5.0"
serde = "1.0.217"
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tokio-util = "0.7.16"
futures-util = "0.3.31"
csv = "1.3.1"
tokio-postgres = { version = "0.7.15", features = [
    "with-chrono-0_4",
    "with-serde_json-1",
    "with-uuid-1",
] }
postgres-native-tls = "0.5.0"
native-tls = "0.2"
mysql_async = { version = "0.36.1", features = ["chrono", "bigdecimal"] }
mysql_common = "0.35.5"
