[package]
name = "engine-core"
version = "0.1.0"
edition = "2024"

[dependencies]
connectors = { path = "../connectors" }
planner = { path = "../planner" }
model = { path = "../model" }
smql-syntax = { path = "../smql-syntax" }

tokio = { version = "1.43.0", features = ["full"] }
tokio-postgres = "0.7.15"
futures = "0.3.31"
thiserror = "2.0.12"
serde = "1.0.217"
chrono = { version = "0.4.39", features = ["serde"] }
async-trait = "0.1.86"
sled = "0.34.7"
bincode = "1.3.3"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
uuid = { version = "1.13.1", features = ["serde", "v4"] }

[dev-dependencies]
tempfile = "3.14.0"
