[package]
name = "engine-core"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
connectors = { path = "../connectors" }
model = { path = "../model" }
smql-syntax = { path = "../smql-syntax" }
expression-engine = { path = "../expression-engine" }
engine-state = { path = "../engine-state" }
engine-infra = { path = "../engine-infra" }
engine-schema = { path = "../engine-schema" }

tokio = { version = "1.43.0", features = ["full"] }
serde = "1.0.217"
serde_json = "1.0.138"
sha2 = "0.10.9"
