[package]
name = "engine-planner"
version = "0.1.0"
edition = "2024"

[dependencies]
model = { path = "../model" }
connectors = { path = "../connectors" }
query-builder = { path = "../query-builder" }
engine-core = { path = "../engine-core" }
engine-runtime = { path = "../engine-runtime" }
engine-processing = { path = "../engine-processing" }
expression-engine = { path = "../expression-engine" }
engine-config = { path = "../engine-config" }

serde = "1.0.217"
serde_json = "1.0.138"
chrono = { version = "0.4.39", features = ["serde"] }
url = "2.5.7"
regex = "1.12.2"
thiserror = "2.0.12"
tracing = "0.1.41"
uuid = "1.19.0"
async-trait = "0.1.86"
mysql_async = "0.36.1"
tokio-postgres = "0.7.12"
tokio = { version = "1.43.0", features = ["full"] }
toml = "0.8"
once_cell = "1.20"
sled = "0.34"
bincode = "1.3"

[dev-dependencies]
tempfile = "3.8"
