[package]
name = "engine-schema"
version = "0.1.0"
edition = "2024"

[dependencies]
connectors = { path = "../connectors" }
query-builder = { path = "../query-builder" }
model = { path = "../model" }

tokio = { version = "1.43.0", features = ["full"] }
thiserror = "2.0.12"
async-trait = "0.1.86"
tracing = "0.1.41"
