[package]
name = "engine-state"
version = "0.1.0"
edition = "2024"

[dependencies]
model = { path = "../model" }

tokio = { version = "1.43.0", features = ["full"] }
thiserror = "2.0.12"
serde = "1.0.217"
chrono = { version = "0.4.39", features = ["serde"] }
async-trait = "0.1.86"
sled = "0.34.7"
bincode = "1.3.3"
serde_json = "1.0"
tracing = "0.1.41"

[dev-dependencies]
tokio = { version = "1.43.0", features = ["full"] }
tempfile = "3.14.0"
