[package]
name = "engine-verify"
version = "0.1.0"
edition = "2024"

[dependencies]
model = { path = "../model" }
engine-state = { path = "../engine-state" }
engine-core = { path = "../engine-core" }
connectors = { path = "../connectors" }
query-builder = { path = "../query-builder" }

dirs = "6.0.0"
thiserror = "2.0.12"
tracing = "0.1"
