[package]
name = "engine-wasm"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
model = { path = "../model" }

wasmtime = { version = "36", features = ["cranelift", "cache"] }
wasmtime-wasi = "36"
thiserror = "2.0.12"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.149"
base64 = "0.22.1"
bigdecimal = "0.4.7"
chrono = { version = "0.4.39", features = ["serde"] }
uuid = { version = "1.13.1", features = ["serde"] }
anyhow = "1.0.102"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
