[package]
name = "expression-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
model = { path = "../model" }
smql-syntax = { path = "../smql-syntax" }
bigdecimal = "0.4"
tracing = "0.1"
thiserror = "2.0"

[dev-dependencies]
# Only need engine-core for tests
engine-core = { path = "../engine-core" }
