[package]
name = "model"
version = "0.1.0"
edition = "2024"

[dependencies]
smql-syntax = { path = "../smql-syntax" }

async-trait = "0.1.86"
serde = "1.0.217"
serde_json = "1.0.138"
bigdecimal = "0.4.7"
chrono = { version = "0.4.39", features = ["serde"] }
uuid = { version = "1.13.1", features = ["serde"] }
lazy_static = "1.5.0"
xxhash-rust = { version = "0.8.12", features = ["xxh3"] }
chrono-tz = "0.10.4"
