[package]
name = "model"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
smql-syntax = { path = "../smql-syntax" }

async-trait = "0.1.86"
bigdecimal = { version = "0.4.7", features = ["serde"] }
blake3 = "1.8.2"
chrono = { version = "0.4.39", features = ["serde"] }
uuid = { version = "1.13.1", features = ["serde", "v4"] }
lazy_static = "1.5.0"
xxhash-rust = { version = "0.8.12", features = ["xxh3"] }
chrono-tz = "0.10.4"
serde = { version = "1.0.217", features = ["derive"] }
sha2 = "0.10"
serde_json = "1.0.138"
thiserror = "2.0.12"
