[package]
name = "planner"
version = "0.1.0"
edition = "2024"

[dependencies]
smql-syntax = { path = "../smql-syntax" }
model = { path = "../model" }

serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
md5 = "0.8.0"
pest = "2.7.15"
async-trait = "0.1.86"
chrono-tz = "0.10.4"
chrono = { version = "0.4.39", features = ["serde"] }
