[package]
name = "smql-syntax"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = { version = "2.9.0", features = ["serde"] }
pest = "2.7.15"
pest_derive = "2.7.15"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
md5 = "0.8.0"
thiserror = "2.0.12"
