[package]
name = "postgres"
version = "0.1.0"
edition = "2021"

[dependencies]
sql_adapter = { path = "../sql_adapter" }

async-trait = "0.1.86"
sqlx = { version = "0.8.3", features = [
    "mysql",
    "postgres",
    "runtime-tokio",
    "tls-native-tls",
    "bigdecimal",
    "chrono",
] }
tokio = { version = "1.43.0", features = ["full"] }
bigdecimal = "0.4.7"
chrono = { version = "0.4.39", features = ["serde"] }
uuid = { version = "1.13.1", features = ["serde"] }
serde_json = "1.0.138"
lazy_static = "1.5.0"
serde = "1.0.217"
