[package]
name = "stratum-plugin-js-runtime"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
rquickjs = "0.12.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "z"   # size > speed; QuickJS dominates
lto = true
codegen-units = 1
strip = true
panic = "abort"
