[package]
name = "stratum-plugin-sdk"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[dependencies]
stratum-plugin-sdk-macros = { path = "../stratum-plugin-sdk-macros", version = "0.1.0" }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.149"
bigdecimal = { version = "0.4.7", features = ["serde"] }
chrono = { version = "0.4.39", features = ["serde"] }
uuid = { version = "1.13.1", features = ["serde", "v4"] }
base64 = "0.22.1"